...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gVv-ft-q4b">
                                <rect key="frame" x="10" y="831" width="394" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="3fm-Fx-PXS"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Next"/>
                                <connections>
                                    <segue destination="CuQ-CA-lGh" kind="show" id="ZJ4-gG-F3m"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                            <constraint firstItem="gVv-ft-q4b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="OmW-eI-9cH"/>
                            <constraint firstItem="636-7q-WJz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Pff-CQ-h25"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gVv-ft-q4b" secondAttribute="trailing" constant="10" id="QYj-AL-gjX"/>
                            <constraint firstItem="636-7q-WJz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aTc-bD-0Hn"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Select Country" id="iHi-e4-ORn"/>
                    <connections>
                        <outlet property="countriesRadioGroup" destination="636-7q-WJz" id="u9J-oW-et1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
